--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* sora regular */
+@font-face {
+    font-family: "soraRegular";
+    src: local("soraRegular"),
+    url("fonts/sora/Sora-Regular.ttf") format("truetype");
+    font-weight: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* sora bold */
+@font-face {
+    font-family: "soraBold";
+    src: local("soraBold"),
+    url("fonts/sora/Sora-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+
+/* sora semi-bold */
+@font-face {
+    font-family: "soraSemiBold";
+    src: local("soraSemiBold"),
+    url("fonts/sora/Sora-SemiBold.ttf") format("truetype");
 }
